--- a/docs/run/runtime-options-overview.mdx
+++ b/docs/run/runtime-options-overview.mdx
@@ -179,7 +179,7 @@ Scroll to see the full table.
 |                      | enable_gates             |                         | `True`/`False`                                                                                      | `False`                     |
 |                      | enable_measure           |                         | `True`/`False`                                                                                      | `True`                      |
 |                      | num_randomizations       |                         |  `auto`/ integer >= 1                                                                         | `'auto'`                    |
-|                      | shots_per_randomization  |                         |   `auto`/ integer >= 1 and <= `backend.max_shots`.                                                                      | `'auto'`                    |
+|                      | shots_per_randomization  |                         |   `auto`/ integer no larger than `backend.max_shots`.                                                                      | `'auto'`                    |
 |                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                                | `'active-accum'`            |
   </TabItem>
 
@@ -209,7 +209,7 @@ Scroll to see the full table.
 |                      | enable_gates             |                         | `True`/`False`                                                                                      | `False`                     |
 |                      | enable_measure           |                         | `True`/`False`                                                                                      | `True`                      |
 |                      | num_randomizations       |                         |  `auto`/ integer >= 1                                                                          | `'auto'`                    |
-|                      | shots_per_randomization  |                         |   `auto`/ integer >= 1 and <= `backend.max_shots`.                                                                      | `'auto'`                    |
+|                      | shots_per_randomization  |                         |   `auto`/ integer no larger than `backend.max_shots`.                                                                      | `'auto'`                    |
 |                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                                | `'active-accum'`            |
 
   </TabItem>
@@ -324,14 +324,14 @@ Due to differences in the device compilation process, certain runtime features c
 
 |                          | fractional gates                                                  | dynamic circuits                                                                          | Gate-folding ZNE                                                                                    | PEA                                                               | PEC                                                               | dynamical decoupling                                              | pulse gates (Eagle only)                                                                                | gate twirling                                                                                                                                                     |
 |--------------------------|-------------------------------------------------------------------|-------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------|-------------------------------------------------------------------|-------------------------------------------------------------------|-------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| fractional gates         |                                                                   | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                       | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                                                                                   |
-| dynamic circuits         | ![Incompatible](/images/run/runtime-options-overview/error.svg)   |                                                                                           | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                     | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                         | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) (Non-conditional gates)                                                                         |
-| Gate-folding ZNE         | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           |                                                                                                     | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Limitations](/images/run/runtime-options-overview/warning.svg) (Might not work with custom gates<br>) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                                                                                 |
-| PEA                      | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                     |                                                                   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                         | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                                                                                 |
-| PEC                      | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                     | ![Incompatible](/images/run/runtime-options-overview/error.svg)   |                                                                   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                         | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                                                                                 |
-| dynamical decoupling     | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) |                                                                   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                       | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                                                                                 |
-| pulse gates (Eagle only) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           | ![Limitations](/images/run/runtime-options-overview/warning.svg) (Might not work with custom gates) | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) |                                                                                                         | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) <br>![Limitations](/images/run/runtime-options-overview/warning.svg) (Clifford entanglers only) |
-| gate twirling            | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) (Non-conditional gates) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Limitations](/images/run/runtime-options-overview/warning.svg) (Clifford entanglers only)             |                                                                                                                                                                   |
+| fractional gates         |                                                                   | X                           |  ✔                                   | X   | X   |  ✔ |  ✔                                       | X                                                                                                   |
+| dynamic circuits         | X   |                                                                                           | X                                     | X   | X   | X   | X                                         |  ✔ (Non-conditional gates)                                                                         |
+| Gate-folding ZNE         |  ✔ | X                           |                                                                                                     | X   | X   |  ✔ | ! (Might not work with custom gates) |  ✔                                                                                                 |
+| PEA                      | X   | X                           | X                                     |                                                                   | X   |  ✔ | X                                         |  ✔                                                                                                 |
+| PEC                      | X   | X                           | X                                     | X   |                                                                   |  ✔ | X                                         |  ✔                                                                                                 |
+| dynamical decoupling     |  ✔ | X                           |  ✔                                   |  ✔ |  ✔ |                                                                   |  ✔                                       |  ✔                                                                                                 |
+| pulse gates (Eagle only) |  ✔ | X                           | ! (Might not work with custom gates) | X   | X   |  ✔ |                                                                                                         |  ✔ <br />! (Clifford entanglers only) |
+| gate twirling            | X   |  ✔ (Non-conditional gates) |  ✔                                   |  ✔ |  ✔ |  ✔ | ! (Clifford entanglers only)             |                                                                                                                                                                   |
 
 ## V2 changes
 Options are specified differently in the V2 primitives in these ways:
@@ -480,7 +480,9 @@ Shots (or precision) can be specified in multiple places in V2.  They are priori
 3. The `options.default_shots` value
 4. The `options.default_precision` value
 
-    ```python
+Example:
+
+```python
 from qiskit_ibm_runtime import SamplerV2 as Sampler
 
 # Setting shots during primitive initialization
@@ -495,7 +497,7 @@ sampler.options.update(default_shots=1024, dynamical_decoupling={"sequence_type"
 
 # Sample two circuits at 128 shots each.
 sampler.run([circuit1, circuit2], shots=128)
-```
+ ```
   </TabItem>
 
   <TabItem value="v1primitives" label="V1 Primitives">
