--- a/docs/api/migration-guides/qiskit-runtime-options.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-options.mdx
@@ -24,8 +24,8 @@ All `backend.run` options are now available through the Qiskit Runtime primitive
 | schedule_los        | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
 | meas_level          | options.execution.meas_type: <br></br>• For meas_level=1 and meas_return="avg", use avg_kerneled  <br></br>• For meas_level=1 and meas_return="single", use kerneled  <br></br>• For meas_level=2, use classified <br></br>• meas_level=0 is no longer supported by IBM backends.                                                                                           |   |
 | meas_return         | options.execution.meas_type (See above.)                                                                                          |                                                                                                                   |
-| memory_slots        | N/A: This is automatically determined by the system.                                                                  | ibmq-provider only                                                                                                                   |
-| memory_slot_size    | N/A: This is automatically determined by the system.                                                                  | ibmq-provider only                                                                                                                   |
+| memory_slots        | N/A: This is automatically determined by the QPU.                                                                  | ibmq-provider only                                                                                                                   |
+| memory_slot_size    | N/A: This is automatically determined by the QPU.                                                                  | ibmq-provider only                                                                                                                   |
 | rep_time            | N/A: Use rep_delay instead.                                                                                           |                                                                                                                                      |
 | rep_delay           | options.execution.rep_delay                                                                                           |                                                                                                                                      |
 | init_qubits         | options.execution.init_qubits                                                                                         |                                                                                                                                      |
