--- a/docs/api/migration-guides/qiskit-opflow-module.mdx
+++ b/docs/api/migration-guides/qiskit-opflow-module.mdx
@@ -21,7 +21,7 @@ the [`qiskit.opflow`](../qiskit/0.46/opflow) module to the [`qiskit.primitives`]
 <Admonition type="note">
   Most references to the [`qiskit.primitives.Sampler`](../qiskit/qiskit.primitives.Sampler) or [`qiskit.primitives.Estimator`](../qiskit/qiskit.primitives.Estimator) in this guide
   can be replaced with instances of any primitive implementation. For example Aer primitives ([`qiskit_aer.primitives.Sampler`](https://qiskit.org/ecosystem/aer/stubs/qiskit_aer.primitives.Sampler.html)/[`qiskit_aer.primitives.Estimator`](https://qiskit.org/ecosystem/aer/stubs/qiskit_aer.primitives.Estimator.html)) or the Qiskit Runtime primitives ([`qiskit_ibm_runtime.Sampler`](../qiskit-ibm-runtime/qiskit_ibm_runtime.Sampler)/[`qiskit_ibm_runtime.Estimator`](../qiskit-ibm-runtime/qiskit_ibm_runtime.Estimator)).
-  Specific systems can be wrapped with ([`qiskit.primitives.BackendSampler`](../qiskit/qiskit.primitives.BackendSampler), [`qiskit.primitives.BackendEstimator`](../qiskit/qiskit.primitives.BackendEstimator)) to also present primitive-compatible interfaces.
+  Specific QPUs can be wrapped with ([`qiskit.primitives.BackendSampler`](../qiskit/qiskit.primitives.BackendSampler), [`qiskit.primitives.BackendEstimator`](../qiskit/qiskit.primitives.BackendEstimator)) to also present primitive-compatible interfaces.
 
   Certain classes, such as the
   [`qiskit.opflow.expectations.AerPauliExpectation`](../qiskit/0.46/qiskit.opflow.expectations.AerPauliExpectation), can only be replaced by a specific primitive instance
@@ -34,7 +34,7 @@ the [`qiskit.opflow`](../qiskit/0.46/opflow) module to the [`qiskit.primitives`]
 The [`qiskit.opflow`](../qiskit/0.46/opflow) module was originally introduced as a layer between circuits and algorithms, a series of building blocks
 for quantum algorithm research and development.
 
-The release of the [`qiskit.primitives`](../qiskit/primitives) introduced a new paradigm for interacting with systems. Instead of
+The release of the [`qiskit.primitives`](../qiskit/primitives) introduced a new paradigm for interacting with QPUs. Instead of
 preparing a circuit to execute with a `backend.run()` type of method, algorithms can leverage the [`qiskit.primitives.Sampler`](../qiskit/qiskit.primitives.Sampler) and
 [`qiskit.primitives.Estimator`](../qiskit/qiskit.primitives.Estimator) primitives, send parametrized circuits and observables, and directly receive quasi-probability distributions or
 expectation values (respectively). This workflow simplifies the pre-processing and post-processing steps
@@ -587,7 +587,7 @@ See more examples in [Expectations](#expectations)  and [Converters](#converters
 The role of the [`qiskit.opflow.converters`](../qiskit/0.46/qiskit.opflow.converters) submodule was to convert the operators into other opflow operator classes: 
 ([`qiskit.opflow.converters.TwoQubitReduction`](../qiskit/0.46/qiskit.opflow.converters.TwoQubitReduction), [`qiskit.opflow.converters.PauliBasisChange`](../qiskit/0.46/qiskit.opflow.converters.PauliBasisChange), and so on).
 The [`qiskit.opflow.converters.CircuitSampler`](../qiskit/0.46/qiskit.opflow.converters.CircuitSampler) traversed an operator and outputted
-approximations of its state functions using a quantum system.
+approximations of its state functions using a QPU.
 This functionality has been replaced by the [`qiskit.primitives`](../qiskit/primitives).
 
 | Opflow | Alternative |
