--- a/docs/verify/building_noise_models.ipynb
+++ b/docs/verify/building_noise_models.ipynb
@@ -612,7 +612,7 @@
     }
    ],
    "source": [
-    "# System Specification\n",
+    "# QPU Specification\n",
     "n_qubits = 4\n",
     "circ = QuantumCircuit(n_qubits)\n",
     "\n",
