--- a/docs/start/setup-channel.mdx
+++ b/docs/start/setup-channel.mdx
@@ -5,7 +5,7 @@ description: Installation and setup instructions for IBM Quantum Platform or IBM
 
 # Set up an IBM Quantum channel
 
-You can access IBM Quantum&trade; QPUs by using the IBM Quantum Platform or IBM Cloud&reg; _channel_.  _Channel_ is the term used to describe the method you use to access IBM Quantum services.
+You can access IBM QPUs by using the IBM Quantum Platform or IBM Cloud&reg; _channel_.  _Channel_ is the term used to describe the method you use to access IBM Quantum&trade; services.
 
 ## Select an IBM Quantum channel
 
