--- a/docs/start/install.mdx
+++ b/docs/start/install.mdx
@@ -8,16 +8,16 @@ description: Install the Qiskit SDK and Qiskit Runtime on various operating syst
 
 <iframe width="100%" height="450" src="https://www.youtube.com/embed/dZWz4Gs_BuI?si=EbbKEtvPAk7G8DRZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-Whether you will work locally or in a cloud environment, the first step for all users is to install Qiskit. For those wanting to run on a real system, your next step is to choose one of two channels in order to access IBM Quantum&trade; systems: IBM Quantum Platform or IBM Cloud&reg;.
+Whether you will work locally or in a cloud environment, the first step for all users is to install Qiskit. For those wanting to run on a real QPU, your next step is to choose a channel to access IBM QPUs: IBM Quantum Platform or IBM Cloud&reg;.
 
 <Admonition type="caution" title="Upgrade from Qiskit 0.x to Qiskit 1.0 and beyond">
   (If you are installing Qiskit for the first time, skip ahead to the [Install and set up](#local) section. This notice is relevant only to users who have installed Qiskit previously.)
 
-  **For those upgrading from version 0.x to 1.0 or later**: note that because Qiskit 1.0 uses a new packaging structure, you **cannot** use `pip install -U qiskit` to upgrade from any Qiskit 0.x version to 1.0. 
-  
-  See the [Qiskit 1.0 migration guide](/api/migration-guides/qiskit-1.0) for details and instructions. 
-  
-  Future updates starting with Qiskit 1.0 will allow for in-place upgrades.  
+  **For those upgrading from version 0.x to 1.0 or later**: note that because Qiskit 1.0 uses a new packaging structure, you **cannot** use `pip install -U qiskit` to upgrade from any Qiskit 0.x version to 1.0.
+
+  See the [Qiskit 1.0 migration guide](/api/migration-guides/qiskit-1.0) for details and instructions.
+
+  Future updates starting with Qiskit 1.0 will allow for in-place upgrades.
 </Admonition>
 
 <span id="local"></span>
@@ -35,11 +35,11 @@ Whether you will work locally or in a cloud environment, the first step for all 
     A virtual Python environment is an isolated space to work with Python for a specific purpose — so you can install whatever packages you wish, and set up libraries, dependencies, and so on, without affecting the "base" Python environment on your machine.
 
     One important advantage of a virtual environment is that if your Python environment becomes corrupted somewhere along the way, you can easily delete the virtual environment and start over!
-    
-    Choose a preferred location in which to store information about your virtual environments. Commonly they're stored in a directory named `.venv` within a user's home directory. 
+
+    Choose a preferred location in which to store information about your virtual environments. Commonly they're stored in a directory named `.venv` within a user's home directory.
     </details>
 
-    First, create a minimal environment with only Python installed in it. 
+    First, create a minimal environment with only Python installed in it.
 
         <OperatingSystemTabs>
           <TabItem value="mac" label="macOS">
@@ -123,7 +123,7 @@ Whether you will work locally or in a cloud environment, the first step for all 
       jupyter notebook path/to/notebook.ipynb
       ```
 
-If you are planning to work locally and use simulators built into Qiskit, then your installation is done. If you want to run jobs on IBM Quantum systems, next [select an access channel](setup-channel) and finish your setup.
+If you are planning to work locally and use simulators built into Qiskit, then your installation is done. If you want to run jobs on IBM QPUs, next [select an access channel](setup-channel) and finish your setup.
 
 <Admonition type="note" title="Stay current with the latest versions">
     Periodically check the [Qiskit release notes](../api/qiskit/release-notes) and the [Qiskit Runtime release notes](../api/qiskit-ibm-runtime/release-notes) to see new releases. We recommend frequently updating your requirements for `qiskit` and `qiskit-ibm-runtime` by, for example, changing the versions in `requirements.txt` to the latest versions.
@@ -238,7 +238,7 @@ period between major version releases is one year. Minor versions introduce
 new features and bug fixes without breaking API compatibility, and are
 periodically (currently every three months) published for **only** the
 current major version. Patch versions provide fixes for bugs identified in
-the most recent minor version of each actively supported release series (that is, the 
+the most recent minor version of each actively supported release series (that is, the
 major version). We support at most two release series at a time, which occurs
 only during the period of overlap following a new major version release,
 described in more detail below.
@@ -257,13 +257,13 @@ For an up-to-date release schedule, refer to the Qiskit Github project's [milest
 
 With the release of a new major version, the previous major version is supported
 for at least six months; only bug and security fixes are accepted during this time and only patch releases are published for this major version. A final
-patch version is published when support is dropped, and that release 
+patch version is published when support is dropped, and that release
 also documents the end of support for that major version series. A longer
 support window is needed for the previous major version as this gives downstream
 Qiskit consumers and their users a chance to migrate their code.
-Downstream libraries that 
+Downstream libraries that
 depend on Qiskit should not raise their minimum required Qiskit version to a new
-major version immediately after its release because the library's user base needs time 
+major version immediately after its release because the library's user base needs time
 to migrate to the new API changes. Having an extended support window
 for the previous major Qiskit version gives downstream projects time to ensure
 compatibility with the next major version. Downstream projects can provide
@@ -322,10 +322,10 @@ For example, specifying `qiskit<2` in a requirements file when the current
 major Qiskit version is 1 ensures that you're using a version of Qiskit
 that doesn't have breaking API changes.
 
-Capping the version less than the next major version 
+Capping the version less than the next major version
 ensures that you see any deprecation warnings before a
-major version release. 
-Without the cap, `pip` installs 
+major version release.
+Without the cap, `pip` installs
 the newest version available by default.
 </details>
 
@@ -363,7 +363,7 @@ release had some issue with the sdist package publishing, and a post-release
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-  -  [Select and set up an IBM Quantum channel.](setup-channel)
+  -  [Select and set up an IBM Quantum&trade; channel.](setup-channel)
   -  [Configure Qiskit locally.](configure-qiskit-local)
   -  Follow the steps in [Hello world](hello-world) to write and run a quantum program.
   -  Try one of the [workflow example tutorials.](https://learning.quantum.ibm.com/catalog/tutorials?category=workflow-example)
