--- a/docs/verify/simulate-with-qiskit-aer.ipynb
+++ b/docs/verify/simulate-with-qiskit-aer.ipynb
@@ -248,7 +248,7 @@
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "  - To simulate small, simple circuits, see [Exact simulation with Qiskit primitives](simulate-with-qiskit-primitives).\n",
     "  - Review the [Qiskit Aer](https://qiskit.org/ecosystem/aer/) documentation.\n",
-    "  - Learn how to run on a physical system in the [Run](../run) section.\n",
+    "  - Learn how to run on a QPU in the [Run](../run) section.\n",
     "</Admonition>"
    ]
   }
@@ -270,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.2"
   },
   "title": "Exact and noisy simulation with Qiskit Aer primitives"
  },
