--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Hello world\n",
     "\n",
-    "This example contains two parts. You will first create a simple quantum program and run it on a quantum system.  Because actual quantum research requires much more robust programs, in the second section ([Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits)), you will scale the simple program up to utility level.  You can also follow along with the Hello World episode of the Coding with Qiskit 1.0 video series.\n",
+    "This example contains two parts. You will first create a simple quantum program and run it on a QPU.  Because actual quantum research requires much more robust programs, in the second section ([Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits)), you will scale the simple program up to utility level.  You can also follow along with the Hello World episode of the Coding with Qiskit 1.0 video series.\n",
     "\n",
     "<iframe width=\"100%\" height=\"450\" src=\"https://www.youtube.com/embed/93-zLTppFZw?si=whJzB_FrpuorerTv\" title=\"Hello World\" frameborder=\"0\" allow=\"accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
    ]
@@ -414,7 +414,7 @@
    "source": [
     "## Scale to large numbers of qubits\n",
     "\n",
-    "In quantum computing, utility-scale work is crucial for making progress in the field. Such work requires computations to be done on a much larger scale; working with circuits that might use over 100 qubits and over 1000 gates. This example demonstrates how you can accomplish utility-scale work on IBM Quantum systems by creating and analyzing a 100-qubit GHZ state.  It uses the Qiskit Patterns workflow and ends by measuring the expectation value $\\langle Z_0 Z_i \\rangle $ for each qubit.\n",
+    "In quantum computing, utility-scale work is crucial for making progress in the field. Such work requires computations to be done on a much larger scale; working with circuits that might use over 100 qubits and over 1000 gates. This example demonstrates how you can accomplish utility-scale work on IBM QPUs by creating and analyzing a 100-qubit GHZ state.  It uses the Qiskit patterns workflow and ends by measuring the expectation value $\\langle Z_0 Z_i \\rangle $ for each qubit.\n",
     "\n",
     "### Step 1. Map the problem\n",
     "\n",
@@ -459,7 +459,7 @@
    "id": "5b3d0d74",
    "metadata": {},
    "source": [
-    "Next, map to the operators of interest. This example uses the `ZZ` operators between qubits to examine the behavior as they get farther apart.  Increasingly inaccurate (corrupted) expectation values between distant qubits would reveal the level of noise on the system."
+    "Next, map to the operators of interest. This example uses the `ZZ` operators between qubits to examine the behavior as they get farther apart.  Increasingly inaccurate (corrupted) expectation values between distant qubits would reveal the level of noise on the QPU."
    ]
   },
   {
@@ -622,7 +622,7 @@
    "id": "0afc307c",
    "metadata": {},
    "source": [
-    "The previous plot shows that as the distance between qubits increases, the signal decays because there is noise on the system."
+    "The previous plot shows that as the distance between qubits increases, the signal decays because there is noise on the QPU."
    ]
   },
   {
@@ -657,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.2"
   },
   "title": "Hello world",
   "widgets": {
