--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -76,7 +76,14 @@ On the IBM Quantum blog, we take a deep dive into the new beta release with a sp
 
 ## Qiskit IBM Runtime service updates
 
-This summary of the latest changes to the Qiskit Runtime service applies to anyone using Qiskit Runtime, regardless of how you communicate with the service (using qiskit-ibm-runtime or otherwise), or which version of the client SDK you use. 
+This summary of the latest changes to the Qiskit Runtime service applies to anyone using Qiskit Runtime, regardless of how you communicate with the service (using qiskit-ibm-runtime or otherwise), or which version of the client SDK you use.
+
+### 1 July 2024
+
+The following endpoints are deprecated and will be removed on or after 1 October, 2024: `GET /stream/jobs` and `GET /stream/jobs/{id}` This removal has the following impacts:
+
+- After the enpoints are removed, `job.stream_results()` and `job.interim_results()` will be removed.
+- Additional methods, such as `job.result()` currently use the deprecated endpoints.  Upgrade to `qiskit_ibm_runtime` 0.25 or later before the endpoints are removed to avoid disruption.
 
 ### 18 June 2024
 
