--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -80,7 +80,7 @@ This summary of the latest changes to the Qiskit Runtime service applies to anyo
 
 ### 1 July 2024
 
-The following endpoints are deprecated and will be removed on or after 1 October, 2024: `GET /stream/jobs` and `GET /stream/jobs/{id}` This removal has the following impacts:
+The following endpoints are deprecated and will be removed on or after 1 October 2024: `GET /stream/jobs` and `GET /stream/jobs/{id}` This removal has the following impacts:
 
 - After the endpoints are removed, `job.stream_results()` and `job.interim_results()` will be removed.
 - Additional methods, such as `job.result()` currently use the deprecated endpoints.  Upgrade to `qiskit_ibm_runtime` 0.25 or later before the endpoints are removed to avoid disruption.
