Update intro page with calls to action

--- a/docs/run/index.mdx
+++ b/docs/run/index.mdx
@@ -19,4 +19,16 @@ The steps during the run phase are:
 3. Send a job to a system or simulator.
 4. View job results.
 
+
+## Next steps
+
+<Admonition type="tip" title="Recommendations">
+  -  Understand the [primitives interface](./primitives)
+  -  Learn about the [error suppression and mitigation options](./configure-error-mitigation) available to you through Qiskit Runtime.
+  -  Read more about our [hardware platform](./processor-types)
+  -  Understand [execution modes](./execution-modes) and [job management](./save-jobs)
+</Admonition>
+
+
 [^1]: Median 2Q gate errors measured over all accessible Eagle processors from July 20 to September 20, 2023.
+
