Fix custom-transpiler-pass notebook

--- a/docs/transpile/custom-transpiler-pass.ipynb
+++ b/docs/transpile/custom-transpiler-pass.ipynb
@@ -295,7 +295,7 @@
     }
    ],
    "source": [
-    "np.alltrue([Operator(twirled_qc).equiv(qc) for twirled_qc in twirled_qcs])"
+    "np.all([Operator(twirled_qc).equiv(qc) for twirled_qc in twirled_qcs])"
    ]
   },
   {
