--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -119,10 +119,10 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
 
 **New pages**
 
-- [Error mitigation techniques](/run/error-mitigation-explanation)
-- [Error mitigation and suppression techniques](/run/error-mitigation-explanation)
-- [The Operator class](/build/operator-class)
-- [Transpile against custom backends](/transpile/custom-backend)
+- [Error mitigation techniques](./error-mitigation-and-suppression-techniques)
+- [Error mitigation and suppression techniques](./error-mitigation-and-suppression-techniques)
+- [The Operator class](./operator-class)
+- [Transpile against custom backends](./custom-backend)
 
 **New API reference docs**
 
