--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -64,7 +64,7 @@ Version 2 (available with qiskit-ibm-runtime 0.21.0) is the first major interfac
 * You can **turn on or off individual error mitigation and suppression methods**.
 * You can choose to **get counts or per-shot measurements** instead of quasi-probabilities from Sampler V2.
 * Due to scaling issues, Sampler V2 does not support specifying a resilience level, and Estimator V2 supports only levels 0 - 2.
-* To reduce the total execution time, v2 primitives only support ISA circuits. You can use the [Qiskit transpiler](advanced-runtime-options#runtime-compilation) (manually) or the [AI-driven transpilation service (premium users)](./transpile/qiskit-transpiler-service) to transform the circuits before making the queries to the primitives.
+* To reduce the total execution time, v2 primitives only support ISA circuits. You can use the [Qiskit transpiler](runtime-options-overview#runtime-compilation) (manually) or the [AI-driven transpilation service (premium users)](qiskit-transpiler-service) to transform the circuits before making the queries to the primitives.
 
 See the [EstimatorV2 API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2) and [SamplerV2 API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV2) for full details.
 
@@ -283,7 +283,7 @@ The Qiskit Runtime primitives provide a more sophisticated implementation (for e
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Read [Get started with primitives](primitives-get-started) to implement primitives in your work.
+    - Read [Get started with primitives](get-started-with-primitives) to implement primitives in your work.
     - Review detailed [primitives examples.](primitives-examples)
     - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum&trade; Learning.
