--- a/docs/guides/primitives-examples.mdx
+++ b/docs/guides/primitives-examples.mdx
@@ -6,7 +6,7 @@ description: Practical examples of using primitives in Qiskit Runtime.
 
 # Primitives examples
 
-The examples in this section illustrate some common ways to use primitives. Before running these examples, follow the instructions in [Install and set up.](install)
+The examples in this section illustrate some common ways to use primitives. Before running these examples, follow the instructions in [Install and set up.](install-qiskit)
 
 <Admonition type="caution" title="Important">
 To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the system (referred to as *instruction set architecture (ISA)* circuits and observables) before being submitted to the Qiskit Runtime primitives.  See the [transpilation documentation](./transpile) for instructions to transform circuits.  Due to this change, the primitives will no longer perform layout or routing operations.  Consequently, transpilation options referring to those tasks will no longer have any effect.
